<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            style="@style/DashboardCardStyle"
            android:id="@+id/bt_lock_house"
            card_view:cardCornerRadius="4dp">

            <LinearLayout style="@style/DashboardCardLinearLayoutStyle">
                <ImageView style="@style/DashboardCardImageViewStyle" app:srcCompat="@drawable/ic_lock"/>
                <TextView style="@style/DashboardCardTextViewStyle" android:text="@string/trancar_casa"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/DashboardCardStyle"
            android:id="@+id/bt_unlock_house"
            android:visibility="gone"
            card_view:cardCornerRadius="4dp">

            <LinearLayout style="@style/DashboardCardLinearLayoutStyle">
                <ImageView style="@style/DashboardCardImageViewStyle" app:srcCompat="@drawable/ic_lock"/>
                <TextView style="@style/DashboardCardTextViewStyle" android:text="@string/destrancar_casa"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/bt_lights"
            style="@style/DashboardCardStyle"
            card_view:cardCornerRadius="4dp">

            <LinearLayout style="@style/DashboardCardLinearLayoutStyle">
                <ImageView style="@style/DashboardCardImageViewStyle" app:srcCompat="@drawable/ic_light"/>
                <TextView style="@style/DashboardCardTextViewStyle" android:text="@string/luzes"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <!--<android.support.v7.widget.CardView-->
            <!--style="@style/DashboardCardStyle"-->
            <!--card_view:cardCornerRadius="4dp">-->

            <!--<LinearLayout style="@style/DashboardCardLinearLayoutStyle">-->
                <!--<ImageView style="@style/DashboardCardImageViewStyle" app:srcCompat="@drawable/ic_window"/>-->
                <!--<TextView style="@style/DashboardCardTextViewStyle" android:text="@string/janelas"/>-->
            <!--</LinearLayout>-->
        <!--</android.support.v7.widget.CardView>-->
        <android.support.v7.widget.CardView
            style="@style/DashboardCardStyle"
            card_view:cardCornerRadius="4dp">

            <LinearLayout style="@style/DashboardCardLinearLayoutStyle">
                <ImageView style="@style/DashboardCardImageViewStyle" app:srcCompat="@drawable/ic_garage"/>
                <TextView style="@style/DashboardCardTextViewStyle" android:text="@string/garage"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/bt_open_garage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="0dp"
                        android:textColor="@color/colorAccent"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:text="Abrir"/>
                    <Button
                        android:id="@+id/bt_close_garage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="0dp"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:text="Fechar"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            style="@style/DashboardCardStyle"
            card_view:cardCornerRadius="4dp">

            <LinearLayout android:id="@+id/bt_lights_info" style="@style/DashboardCardLinearLayoutStyle">
                <ImageView style="@style/DashboardCardImageViewStyle" app:srcCompat="@drawable/ic_show_chart_black_24dp"/>
                <TextView style="@style/DashboardCardTextViewStyle" android:text="@string/consumo"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/bt_users"
            style="@style/DashboardCardStyle"
            card_view:cardCornerRadius="4dp">

            <LinearLayout style="@style/DashboardCardLinearLayoutStyle">
                <ImageView style="@style/DashboardCardImageViewStyle" app:srcCompat="@drawable/ic_group_black_24dp"/>
                <TextView style="@style/DashboardCardTextViewStyle" android:text="@string/usuarios"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</LinearLayout>
